tests, templates, buildout with worker

--- a/templates/openregistry.labot.ini
+++ b/templates/openregistry.labot.ini
@@ -1,7 +1,7 @@
 # Begin logging configuration
 
 [loggers]
-keys = root, openprocurement_labot
+keys = root, openregistry_labot_databridge, exc_logger
 
 [handlers]
 keys = console
@@ -13,18 +13,24 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_openprocurement_labot]
-level = DEBUG
-handlers =
-qualname = openprocurement.labot
+[logger_openregistry_labot_databridge]
+class = StreamHandler
+handlers = console
+qualname = openregistry.labot.databridge
 
 [handler_console]
 class = StreamHandler
 args = (sys.stderr,)
-level = NOTSET
+level = DEBUG
 formatter = generic
 
 [formatter_generic]
 format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+[logger_exc_logger]
+level = ERROR
+handlers =
+qualname = exc_logger
+propagate = 0
 
 # End logging configuration
