--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,10 +8,12 @@ develop = .
 extensions = mr.developer
 auto-checkout =
     openprocurement_client
+    openregistry.labot.worker
 find-links = http://op:x9W3jZ@dist.quintagroup.com/op/
 
 [sources]
 openprocurement_client = git https://github.com/karmagood/openprocurement.client.python branch=registry_client
+openregistry.labot.worker = git https://github.com/Scandie/openregistry.labot.worker.git
 
 [openregistry.labot.ini]
 resources = lots
