add openregistry.labot.worker egg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -29,6 +29,7 @@ recipe = zc.recipe.egg:scripts
 dependent-scripts = true
 eggs =
     openregistry.labot [test]
+    openregistry.labot.worker
 
 
 ; [tests.ini]
