add python_interpreter to buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -31,6 +31,7 @@ eggs =
     openregistry.labot [test]
     openregistry.labot.worker
 
+interpreter = python_interpreter
 
 ; [tests.ini]
 ; recipe = collective.recipe.template[genshi]:genshi
